--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .button {
+    @apply border rounded-full
+    px-4 py-2 cursor-pointer hover:shadow-lg
+    active:scale-95 active:bg-gray-100 transition 
+    transform duration-200 ease-out
+  }
+}
+
 
 html,
 body {
